examples/test/testpolicy16828.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16828
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key15: value40
      key27: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value16
      podSelector:
        matchLabels:
          key10: value26
          key17: value32
          key39: value30
